--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Senwatch</title>
-  </head>
-  <body>
-    welcome 2 senwatch
-  </body>
-</html>
+<head>
+  <title>SenWatch</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+</head>
+<body>
+  <h1>SenWatch</h1>
+  <section id="main">
+    <div class='mapnbuttons'>
+      <div>
+        <svg class='map-svg' width="960" height="600"></svg>
+          <script src="lib/d3.v4.min.js"></script>
+          <script src="lib/topojson.v2.min.js"></script>
+          <script src="lib/map_render.js"></script>
+      </div>
+      <aside id='sens-info'>
+        <div class='top-text'>
+          <h1 id="heading">
+            Click on a State to See Senators
+          </h1>
+        </div>
+        <div id="buttons">
+          <div>
+            <div class="btnDiv0">
+
+            </div>
+          </div>
+          <div>
+            <div class="btnDiv1">
+
+            </div>
+          </div>
+        </div>
+      </aside>
+    </div>
+  </section>
+  <link href="https://fonts.googleapis.com/css?family=Arapey" rel="stylesheet">
+  <link rel="stylesheet" href="./stylesheets/styles.css">
+</body>
