set up webpack and start modularizing frontend

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
     <div class='mapnbuttons'>
       <div>
         <svg class='map-svg' width="960" height="600"></svg>
-          <script src="lib/d3.v4.min.js"></script>
-          <script src="lib/topojson.v2.min.js"></script>
-          <script src="lib/map_render.js"></script>
+          <script src="lib/src/d3.v4.min.js"></script>
+          <script src="lib/src/topojson.v2.min.js"></script>
+          <script src="build/bundle.js"></script>
       </div>
       <aside id='sens-info'>
         <div class='top-text'>
@@ -36,4 +36,5 @@
   </section>
   <link href="https://fonts.googleapis.com/css?family=Arapey" rel="stylesheet">
   <link rel="stylesheet" href="./stylesheets/styles.css">
+  <!-- <script src="lib/ppMCall.js"></script> -->
 </body>
