--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
   </section>
   <link href="https://fonts.googleapis.com/css?family=Arapey" rel="stylesheet">
   <link rel="stylesheet" href="./stylesheets/styles.css">
+  <link href="https://www.fontify.me/wf/c582da85a60f5c27c2857902d040d1e3" rel="stylesheet" type="text/css">
   <script src="lib/src/d3.v4.min.js"></script>
   <script src="lib/src/topojson.v2.min.js"></script>
   <script src="build/bundle.js"></script>
