style vote module and start README

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,28 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
+  <header>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/8/88/US-Senate-Logo.svg" />
+    <nav>
+      Coded by M M Alam
+      <br>
+      <a href="https://github.com/mmalamm/senwatch">
+        <img class='nav_logo' src="./images/github_logo.svg" alt="">
+        Project Repo
+      </a>
+      <br>
+      <a href="https://www.linkedin.com/in/muhammad-alam-984317112/">
+        <img class='nav_logo' src="./images/linkedin_logo.svg" alt="">
+        M M Alam
+      </a>
+      <br>
+      <a href="https://mmalamm.github.io">
+        <img class='nav_logo' src="./images/site_logo.svg" alt="">
+        M M Alam
+      </a>
+
+    </nav>
+  </header>
   <h1>SenWatch</h1>
   <section id="main">
     <div class='mapnbuttons'>
