fix styling issues with deleted tweets

--- a/public/index.html
+++ b/public/index.html
@@ -55,8 +55,7 @@
   </section>
   <link href="https://fonts.googleapis.com/css?family=Arapey" rel="stylesheet">
   <link rel="stylesheet" href="./stylesheets/styles.css">
-  <link href="https://www.fontify.me/wf/c582da85a60f5c27c2857902d040d1e3" rel="stylesheet" type="text/css">
-  <link href="https://www.fontify.me/wf/022b13c56d93d0d83327501f98fbec0a" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
   <script src="lib/src/d3.v4.min.js"></script>
   <script src="lib/src/topojson.v2.min.js"></script>
   <script src="build/bundle.js"></script>
