--- a/amp/amp.html
+++ b/amp/amp.html
@@ -140,7 +140,7 @@
     }
   </style>
   <h1 class="top-text">Tristate Area Senators</h1>
-  <amp-list width="auto" height="2000" layout="fixed-height" src="http://localhost:3000/amp-data" class="m1">
+  <amp-list width="auto" height="2000" layout="fixed-height" src="/amp-data" class="m1">
     <template type="amp-mustache" id="amp-template-id">
       <amp-accordion disable-session-states>
         <section>
