--- a/amp/amp.html
+++ b/amp/amp.html
@@ -18,70 +18,11 @@
     }
   </script>
   <link href="https://fonts.googleapis.com/css?family=Arapey" rel="stylesheet">
-  <style amp-boilerplate>
-    body {
-      -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
-      -moz-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
-      -ms-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
-      animation: -amp-start 8s steps(1, end) 0s 1 normal both
-    }
-
-    @-webkit-keyframes -amp-start {
-      from {
-        visibility: hidden
-      }
-      to {
-        visibility: visible
-      }
-    }
-
-    @-moz-keyframes -amp-start {
-      from {
-        visibility: hidden
-      }
-      to {
-        visibility: visible
-      }
-    }
-
-    @-ms-keyframes -amp-start {
-      from {
-        visibility: hidden
-      }
-      to {
-        visibility: visible
-      }
-    }
-
-    @-o-keyframes -amp-start {
-      from {
-        visibility: hidden
-      }
-      to {
-        visibility: visible
-      }
-    }
-
-    @keyframes -amp-start {
-      from {
-        visibility: hidden
-      }
-      to {
-        visibility: visible
-      }
-    }
-  </style>
-  <noscript>
-    <style amp-boilerplate>
-      body {-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}
-    </style>
-  </noscript>
+  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   <script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
   <script async custom-element="amp-list" src="https://cdn.ampproject.org/v0/amp-list-0.1.js"></script>
   <!-- ... and the `amp-mustache` component in the header -->
   <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.1.js"></script>
-</head>
-<body>
   <style>
     body {
       background-color: #002b55;
@@ -139,15 +80,17 @@
       text-decoration: underline;
     }
   </style>
+</head>
+<body>
   <h1 class="top-text">Tristate Area Senators</h1>
   <amp-list width="auto" height="2000" layout="fixed-height" src="/amp-data" class="m1">
     <template type="amp-mustache" id="amp-template-id">
       <amp-accordion disable-session-states>
         <section>
-          <div class="name-tab">
+          <header class="name-tab">
             <amp-img src="{{img_url}}" alt="{{last_name}}" height="24" width="19"></amp-img>
             <span class="sen-name">{{first_name}} {{last_name}} ({{state}}-{{party}})</span>
-          </div>
+          </header>
           <amp-accordion class="nested-accordian">
             <section class="sec">
               <h4>Bio</h4>
@@ -158,6 +101,10 @@
                 Next Election: {{next_election}}<br>
                 Votes with Party {{votes_with_party_pct}}% of the time
               </div>
+            </section>
+            <section class="sec">
+              <h4>Viz</h4>
+              <amp-img alt='viz' src='http://localhost:3000/amp-data/crp/{{pp_id}}' width='460' height='400' layout="responsive"></amp-img>
             </section>
             <section class="sec">
               <h4>Contact Info</h4>
@@ -183,9 +130,6 @@
                   data-tweet-limit="5">
                   Tweets by {{twitter_account}}
                 </a>
-                <script async
-                  src="https://platform.twitter.com/widgets.js"
-                  charset="utf-8"></script>
               </div>
             </section>
           </amp-accordion>
