fix config files and add analytics back to jquery index

--- a/amp/amp.html
+++ b/amp/amp.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <script async src="https://cdn.ampproject.org/v0.js"></script>
-  <title>Hello, AMPs</title>
-  <link rel="canonical" href="http://example.ampproject.org/article-metadata.html">
+  <title>Senwatch AMP</title>
+  <link rel="canonical" href="https://senwatch.herokuapp.com">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <script type="application/ld+json">
     {
