fix amp-viz-img link for production

--- a/amp/amp.html
+++ b/amp/amp.html
@@ -104,7 +104,7 @@
             </section>
             <section class="sec">
               <h4>Viz</h4>
-              <amp-img alt='viz' src='/amp-data/crp/{{pp_id}}' width='460' height='400' layout="responsive"></amp-img>
+              <amp-img alt='viz' src='https://senwatch.herokuapp.com/amp-data/crp/{{pp_id}}' width='460' height='400' layout="responsive"></amp-img>
             </section>
             <section class="sec">
               <h4>Contact Info</h4>
