add bovine corvus

--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,9 @@
         M M Alam
       </a>
       <br>
-      <a href="https://mmalamm.github.io">
-        <img class='nav_logo' src="./images/site_logo.svg" alt="">
-        M M Alam
+      <a href="http://bovinecorv.us">
+        <img class='nav_logo' src="./images/bclogo.svg" alt="">
+        bovine corvus
       </a>
 
     </nav>
